integration_tests/codegen_fail/fail/object/impl_no_fields.stderr
error: GraphQL object must have at least one field
 --> $DIR/impl_no_fields.rs:4:6
  |
4 | impl Object {}
  |      ^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Objects
